--- a/index.html
+++ b/index.html
@@ -9,12 +9,66 @@
   <body>
     <!--container-->
     <div id="container">
+      <!--header-->
       <header>
         <img src="./resources/logo.png">
         <h2>SECRET AGENT SUPPLY INC.</h2>
       </header>
 
+      <!--headline-->
       <div id="headlineBox">
-        
+        <div id="headline">
+          <h3>NEW ARRIVAL</h3>
+          <h1>SPORT BIKES AND MOTORCYCLES</h1>
+        </div>
+      </div>
+
+      <!--nav-->
+      <nav>
+        <ul>
+          <span><a href="#">Eyewear</a></span>
+          <span><a href="#">Apparel</a></span>
+          <span><a href="#">Gadgets</a></span>
+          <span><a href="#">Vehicles</a></span>
+          <span><a href="#">Classes</a></span>
+          <span><a href="#">Contact</a></span>
+        </ul>
+      </nav>
+
+      <!--product-->
+      <div id="productBox">
+        <div class="product">
+          <img src="./resources/pen.png">
+          <h4>Exploding Pen</h4>
+        </div>
+
+        <div class="product">
+          <img src="./resources/watch.png">
+          <h4>Cellular Watch</h4>
+        </div>
+
+        <div class="product">
+          <img src="./resources/glasses.png">
+          <h4>Thermal Glasses</h4>
+        </div>
+      </div>
+
+      <!--info-->
+      <div id="infoBox">
+        <div class="info">
+          <h4>Location</h4>
+          <p>-47.346436, 84.32354</p>
+        </div>
+
+        <div class="info">
+          <h4>Hours</h4>
+          <p>0800 - 1800</p>
+        </div>
+
+        <!--footer-->
+        <footer>
+          <p>&copy Secret Agent Supply Inc.</p>
+        </footer>
+      </div>
   </body>
 </html>
