CSS and HTML up to info.

--- a/index.html
+++ b/index.html
@@ -11,21 +11,25 @@
     <div id="container">
       <!--header-->
       <header>
-        <img src="./resources/logo.png">
-        <h2>SECRET AGENT SUPPLY INC.</h2>
+        <div id="header2">
+          <img src="./resources/logo.png">
+          <h2>SECRET AGENT SUPPLY INC.</h2>
+        </div>
       </header>
 
       <!--headline-->
       <div id="headlineBox">
         <div id="headline">
-          <h3>NEW ARRIVAL</h3>
-          <h1>SPORT BIKES AND MOTORCYCLES</h1>
+          <div id="headline2">
+            <h3>NEW ARRIVAL</h3>
+            <h1>SPORT BIKES AND MOTORCYCLES</h1>
+          </div>
         </div>
       </div>
 
       <!--nav-->
       <nav>
-        <ul>
+        <ul id="nav2">
           <span><a href="#">Eyewear</a></span>
           <span><a href="#">Apparel</a></span>
           <span><a href="#">Gadgets</a></span>
@@ -37,19 +41,27 @@
 
       <!--product-->
       <div id="productBox">
-        <div class="product">
-          <img src="./resources/pen.png">
-          <h4>Exploding Pen</h4>
-        </div>
+        <div id="product">
+          <div class="product2">
+            <div class="product3">
+              <img src="./resources/pen.png">
+            </div>
+            <h4>Exploding Pen</h4>
+          </div>
 
-        <div class="product">
-          <img src="./resources/watch.png">
-          <h4>Cellular Watch</h4>
-        </div>
+          <div class="product2">
+            <div class="product3">
+              <img src="./resources/watch.png">
+            </div>
+            <h4>Cellular Watch</h4>
+          </div>
 
-        <div class="product">
-          <img src="./resources/glasses.png">
-          <h4>Thermal Glasses</h4>
+          <div class="product2">
+            <div class="product3">
+              <img src="./resources/glasses.png">
+            </div>
+            <h4>Thermal Glasses</h4>
+          </div>
         </div>
       </div>
 
