Complete HTML and CSS before making responsive.

--- a/index.html
+++ b/index.html
@@ -76,11 +76,14 @@
           <h4>Hours</h4>
           <p>0800 - 1800</p>
         </div>
-
-        <!--footer-->
-        <footer>
-          <p>&copy Secret Agent Supply Inc.</p>
-        </footer>
       </div>
+
+      <!--footer-->
+      <footer>
+        <div id="footer2">
+          <p>&copy; Secret Agent Supply Inc.</p>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
