Add responsive design.

--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@
       <!--nav-->
       <nav>
         <ul id="nav2">
-          <span><a href="#">Eyewear</a></span>
-          <span><a href="#">Apparel</a></span>
-          <span><a href="#">Gadgets</a></span>
-          <span><a href="#">Vehicles</a></span>
-          <span><a href="#">Classes</a></span>
-          <span><a href="#">Contact</a></span>
+          <span class="tabletDisplayOff"><a href="#">Eyewear</a></span>
+          <span class="tabletDisplayOff"><a href="#">Apparel</a></span>
+          <span class="tabletDisplayOff"><a href="#">Gadgets</a></span>
+          <span class="tabletDisplayOff"><a href="#">Vehicles</a></span>
+          <span class="tabletDisplayOff"><a href="#">Classes</a></span>
+          <span class="tabletDisplayOff"><a href="#">Contact</a></span>
+          <span class="tabletDisplayOn"><a href="#">Menu</a></span>
         </ul>
       </nav>
 
@@ -49,14 +50,14 @@
             <h4>Exploding Pen</h4>
           </div>
 
-          <div class="product2">
+          <div class="product2 mobileDisplayOff">
             <div class="product3">
               <img src="./resources/watch.png">
             </div>
             <h4>Cellular Watch</h4>
           </div>
 
-          <div class="product2">
+          <div class="product2 tabletDisplayOff">
             <div class="product3">
               <img src="./resources/glasses.png">
             </div>
